# esp32emu

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  esp32emu  library.json
docs/: architecture.md  boards.md  examples.md
examples/: a4988_stepper_control.cpp  acs712_current_meter.cpp  adafruit_ccs811_airquality.cpp  adafruit_ina219_monitor.cpp  adafruit_pn532_nfc.cpp  adafruit_sgp30_iaq.cpp  adafruit_vl53l0x_distance.cpp  adafruit_vl53l1x_ranging.cpp  adc_calibrated_v5.cpp  adc_continuous_sampling.cpp  adc_oneshot.cpp  adc_oneshot_read.cpp  adc_read.cpp  ads1115_multichannel.cpp  ads1220_loadcell.cpp  adxl345_motion_detect.cpp  aht20_sensor.cpp  ahtx0_sensor.cpp  apds9960_gesture.cpp  as5600_encoder.cpp  async_mqtt_pubsub.cpp  async_rest_server.cpp  asyncudp_broadcast.cpp  bh1750_light.cpp  blink.cpp  bme280_weather.cpp  bme680_air_quality.cpp  bme68x_air_quality.cpp  bmp3xx_weather_station.cpp  bno08x_rotation.cpp  cap1188_touch_pads.cpp  ccs811_air_quality.cpp  dac_continuous_sine.cpp  dac_wave.cpp  dallas_temperature.cpp  dfplayer_jukebox.cpp  dps310_barometer.cpp  drv2605_haptic.cpp  ens160_air_quality.cpp  esp_console_cli.cpp  (+104 more)
include/: A4988.h  ACS712.h  ADS1220.h  AHTxx.h  APDS9960.h  AS5600.h  Adafruit_ADS1X15.h  Adafruit_ADXL345_U.h  Adafruit_AHTX0.h  Adafruit_AMG88xx.h  Adafruit_AS7341.h  Adafruit_BME280.h  Adafruit_BME680.h  Adafruit_BME68x.h  Adafruit_BMP280.h  Adafruit_BMP3XX.h  Adafruit_CAP1188.h  Adafruit_CCS811.h  Adafruit_DRV2605.h  Adafruit_DotStar.h  Adafruit_ENS160.h  Adafruit_Fingerprint.h  Adafruit_HTU21DF.h  (+150 more)
(+295 files in other folders)
